# Calcium3D

./: .gitignore  APIdoc.md  AutoLODgen.md  Blog.md  CMakeLists.txt  ModelImport.md  PhysicsImplementation.md  README.md  SateManagemnet.md  build_log.txt  compile.sh  editor_settings.json  imgui.ini  material.md  meson.build  prollynextgoal.md  run.sh  runRTX.sh
Resource/Demos/1_AudioVideoTheater/Scenes/: main.scene
Resource/Demos/2_ShadowsAndLighting/: project.c3dproj
Resource/Demos/2_ShadowsAndLighting/Scenes/: main.scene
Resource/Demos/2_ShadowsAndLighting/Shaders/editor/: hitbox.vert
Resource/Demos/2_ShadowsAndLighting/Shaders/passes/geometry/: clustered_forward.frag  depth_prepass.frag
Resource/Demos/2_ShadowsAndLighting/Shaders/passes/postprocess/: ssr.frag  underwater.frag
Resource/Demos/2_ShadowsAndLighting/Shaders/passes/shadow/: point_shadow.frag  point_shadow.geom
Resource/Demos/2_ShadowsAndLighting/Shaders/passes/transparency/: 2dcloud.frag  volumetric_cloud.frag  water.frag  water.vert
Resource/Demos/3_PhysicsPlayground/: project.c3dproj
Resource/Demos/3_PhysicsPlayground/Scenes/: main.scene
Resource/Demos/4_WaterSimulation/: project.c3dproj
Resource/Demos/4_WaterSimulation/Assets/j20/: j20.fbx
Resource/Demos/4_WaterSimulation/Scenes/: main.scene
Resource/Demos/4_WaterSimulation/Scripts/: FlightHUD.cpp  HeatHazeController.cpp  InfiniteWater.cpp  PlaneController.cpp  ProceduralTower.cpp  SpeedLinesController.cpp  ThrusterController.cpp
Resource/Demos/4_WaterSimulation/Shaders/: heathaze.frag  heathaze.vert  thruster.frag
bkup/: backupCMakeLists.txt
fs/: filesystem.cpp  filesystem.h
include/ufbx/: ufbx_impl.c
shaders/: 2dcloud.frag  2dcloud.vert  Tunnel.frag  cbench.frag  cel_shading.frag  cel_shading.vert  cloud.frag  default.frag  default.vert  framebuffer.frag  gizmo.frag  gizmo.vert  gradient_sky.frag  gradient_sky.vert  horizon.frag  main.frag  selection.frag  selection.vert  sun.frag  sun.vert  volumetric_cloud.frag  volumetric_cloud.vert  water.frag  water.vert
shaders/editor/: culling_vis.frag  culling_vis.vert
shaders/environment/: gradient_sky.vert  volumetric_cloud.frag
shaders/passes/geometry/: clustered_forward.frag  default.frag  default.vert  skeletal.frag  skeletal.vert
shaders/passes/post_processing/: sun.frag
shaders/passes/postprocess/: ssr.frag
shaders/passes/shadow/: point_shadow_skeletal.vert
shaders/passes/sky/: gradient_sky.frag
shaders/passes/transparency/: 2dcloud.frag  water.frag  water.vert
shaders/unused/: outline.frag  selection.frag  sun.vert
src/: 2dCloud.cpp  2dCloud.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Cloud.cpp  Cloud.h  EBO.h  EditorLayer.cpp  EditorLayer.h  Gizmo.cpp  Gizmo.h  InputManager.h  Logger.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjectFactory.cpp  ObjectFactory.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.h  VBO.h  VolumetricCloud.cpp  VolumetricCloud.h  Water.cpp  main.cpp
src/AniEngine/: AniEngine.cpp  AniEngine.h  Animation.h  AnimatorUI.cpp  AnimatorUI.h  RiggingUI.cpp  RiggingUI.h
src/AudioEngine/: AudioEngine.h  audioEngine.cpp
src/BuildManager/: BuildManager.cpp  BuildManager.h
src/BuildManager/templates/android/: maybe.md
src/BuildManager/templates/linux/: meson.build
src/C3DprogrammingApi/: C3D.cpp  C3D.h  C3D_Audio.h  C3D_Camera.h  C3D_Environment.h  C3D_Graphics.h  C3D_Input.h  C3D_Light.h  C3D_Math.h  C3D_Object.h  C3D_Optimization.h  C3D_Physics.h  C3D_SDF.h  C3D_Scene.h  C3D_Sprite.h  C3D_System.h  C3D_UI.h  C3D_Video.h  C3D_Water.h
src/Core/: Application.cpp  Application.h  Console.cpp  Console.h  DependencyManager.cpp  DependencyManager.h  EditorApplication.cpp  EditorApplication.h  GPUManager.cpp  GPUManager.h  GameState.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  RuntimeApplication.cpp  RuntimeApplication.h  State.cpp  State.h  StateManager.h  ThreadManager.cpp  ThreadManager.h  main.cpp
src/Editor/: Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  Gizmo.cpp  Gizmo.h  PlayMode.cpp  PlayMode.h
src/Environment/: 2dCloud.cpp  VolumetricCloud.h  Water.h
src/Game/: game_code.cpp
src/Home/: Home.cpp  Home.h
src/ModelImport/: ModelImporter.cpp  ModelImporter.h
src/Physics/: HitboxGraphics.cpp  HitboxGraphics.h  PhysicsEngine.cpp  PhysicsEngine.h
src/Renderer/: AtlasManager.cpp  AtlasManager.h  Camera.cpp  Camera.h  ClusteredLighting.cpp  ClusteredLighting.h  DynamicBatcher.cpp  DynamicBatcher.h  EBO.cpp  EBO.h  Frustum.cpp  Frustum.h  HLODManager.cpp  HLODManager.h  LODGenerator.cpp  LODGenerator.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderContext.h  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  SDFGenerator.cpp  SDFGenerator.h  Shader.cpp  Shader.h  StaticBatcher.cpp  StaticBatcher.h  StreamingManager.cpp  StreamingManager.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  VAO.cpp  (+5 more)
src/Renderer/Passes/: DepthPrepass.cpp  DepthPrepass.h  GeometryPass.cpp  GeometryPass.h  SSRPass.cpp  SSRPass.h  ShadowPass.cpp  ShadowPass.h  SkyPass.cpp  SkyPass.h  TransparencyPass.cpp  TransparencyPass.h  UnderwaterPass.cpp  UnderwaterPass.h
src/Renderer/Pipelines/: EditorPipeline.cpp  EditorPipeline.h  StandardPipeline.cpp  StandardPipeline.h
src/Scene/: Behavior.cpp  Behavior.h  BehaviorRegistry.cpp  BehaviorRegistry.h  ObjectFactory.cpp  ObjectFactory.h  Scene.cpp  Scene.h  SceneIO.cpp  SceneIO.h  SceneManager.cpp  SceneManager.h  ScriptCompiler.h  TransitionType.h
src/Scene/Builtin/: SceneTransitionBehavior.h
src/Tools/Profiler/: GpuProfiler.cpp  GpuProfiler.h  Profiler.cpp  Profiler.h  ProfilerUI.cpp  ProfilerUI.h
src/Tools/Stress/: StressUI.cpp  StressUI.h
src/UI/: UICreationEngine.cpp  UICreationEngine.h  UIElement.h  UIManager.cpp  UIManager.h
src/UI/Screens/: FallbackScreen.cpp  FallbackScreen.h  GameScreen.cpp  GameScreen.h  GameplayScreen.cpp  GameplayScreen.h  Screen.cpp  Screen.h  StartScreen.cpp  StartScreen.h
(+12 files in other folders)
